kyverno-policies/ns/namespace-admin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: admin-namespace-with-label
  labels:
    admin-only: "true"
    name: admin-namespace
