kyverno-policies/ns/namespace-with-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-with-label
  labels:
    name: should-pass-kyverno
